Set overflow to 'auto' to prevent showing many disabled scroll bars.

--- a/app/assets/stylesheets/editor.css.scss
+++ b/app/assets/stylesheets/editor.css.scss
@@ -33,7 +33,7 @@
   #panel-left {
     position: relative;
     max-height: 85vh;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
 
